main/default/objects/Additional_Interests__c/Additional_Interests__c.object-meta.xml
<CustomObject>
    <label>Additional Interest</label>
    <nameField>
        <displayFormat>Additional Interest-{0000}</displayFormat>
        <label>Additional Interests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>