main/default/objects/Additional_Interests__c/fields/Additional_Interest_Account__c.field-meta.xml
<CustomField>
    <fullName>Additional_Interest_Account__c</fullName>
    <label>Additional Interest Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Brokers and Carriers cannot be additional interest.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Interests</relationshipLabel>
    <relationshipName>Additional_Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>