main/default/objects/Additional_Interests__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Institution or Association</fullName>
            </value>
            <value>
                <fullName>Trust, LLC, or LLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>