main/default/objects/Additional_Interests__c/fields/Loan_Reference_number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Reference_number__c</fullName>
    <label>Loan/Reference #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>