main/default/objects/Additional_Interests__c/fields/Loss_Payee_Interest__c.field-meta.xml
<CustomField>
    <fullName>Loss_Payee_Interest__c</fullName>
    <label>Loss Payee Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Structure and Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>