main/default/objects/Additional_Interests__c/fields/Old_Additional_Interest_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Additional_Interest_Account__c</fullName>
    <description>this field use save old Account when Account changed</description>
    <label>Old Additional Interest Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>