main/default/objects/Additional_Interests__c/fields/Parent_Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>Parent_Additional_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Additional Interest</label>
    <referenceTo>Additional_Interests__c</referenceTo>
    <relationshipLabel>Additional Interests</relationshipLabel>
    <relationshipName>Additional_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>