main/default/objects/Additional_Interests__c/fields/Primary_Mortgage_Servicer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mortgage_Servicer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Mortgage Servicer</label>
    <type>Checkbox</type>
</CustomField>