main/default/objects/Additional_Interests__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Insured</fullName>
            </value>
            <value>
                <fullName>Lienholder</fullName>
            </value>
            <value>
                <fullName>Mortgagee</fullName>
            </value>
            <value>
                <fullName>Loss Payee</fullName>
            </value>
            <value>
                <fullName>Additional Interest</fullName>
            </value>
            <value>
                <fullName>Loss Payee and Additional Insured</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trust, LLC or LLP</fullName>
                <isActive>false</isActive>
                <label>Trust, LLC or LLP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>