main/default/objects/Additional_Interests__c/validationRules/Lock_Additional_Interest_Quote_Bound.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Additional_Interest_Quote_Bound</fullName>
    <active>true</active>
    <description>Can&apos;t create or update Additional interest when Quote status is &apos;Quoted&apos; or &apos;Presented&apos; or &apos;Bound&apos; or &apos;Bound Pending&apos;</description>
    <errorConditionFormula>OR(
				ISPICKVAL(Quote__r.Status, &quot;Bound&quot;),
				ISPICKVAL(Quote__r.Status, &quot;Bound Pending&quot;)
)</errorConditionFormula>
    <errorMessage>Can&apos;t create or update Additional interest when Quote status is &apos;Quoted&apos; or &apos;Presented&apos; or &apos;Bound&apos; or &apos;Bound Pending&apos;</errorMessage>
</ValidationRule>