main/default/objects/Additional_Interests__c/validationRules/Opportunity_Edit_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Edit_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISNEW(), 
	OR(
		AND(
			ISBLANK(Quote__r.Policy__c),
			NOT(ISPICKVAL(Quote__r.Opportunity.StageName, &apos;New&apos;)), 
			NOT(ISPICKVAL(Quote__r.Opportunity.StageName, &apos;Prospect&apos;)), 
			NOT(ISPICKVAL(Quote__r.Opportunity.StageName, &apos;Qualified&apos;))
		),
		AND(
			NOT(ISBLANK(Quote__r.Policy__c )),
			NOT(ISPICKVAL(Quote__r.Opportunity.StageName, &apos;Closed Won&apos;))
		) 
	)
)</errorConditionFormula>
    <errorMessage>This Opportunity is locked for editing.</errorMessage>
</ValidationRule>